updated index.html added 15_11_2021.css

--- a/index.html
+++ b/index.html
@@ -1,35 +1,55 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <meta charset="utf-8">
 <html>
-    <head> 
-	<title> Mustafa Taylan Şahbaz's Github Page </title>
-    </head>
-    <body>	
-      <p> 
-         <strong> Introduction to Information Systems </strong> 
-      </p> 
-       <p>
-             <em> 
-             Mustafa Taylan Şahbaz
-             <br> 
-             150200038
-             </em>
-        </p>
+	<head>
+    	<title> Mustafa Taylan Şahbaz Web Page </title>
 
-<p> Evolution of homo species </p>
+	<link rel="stylesheet" type="text/css" href="./15_11_2021.css"/>
 
-<ul>
-    <li> Homo habilis (able man) </li>
-    <li> Homo erectus (upright man) </li>	
-    <li> Homo neanderthalensis </li>
-    <li> Homo floresiensis (hobbit) </li>                 
-    <li> Homo sapiens (wise man) </li> 
-    <ul>
-     <li> Homo sapiens sapiens </li>
-    </ul>
-</ul>
+	<!-- jhgfkjdhkj -->
+	<!-- This is a comment line-->
+	<!--		
+	<style type="text/css">
+			h1 {
+				color: red;
+				font-size: 24 pt;
+				text-decoration: underline;
+				font-family: Tahoma, Helvetica, sans-serif;
+			}
 
- <h1> <strong> Human Evolution </strong> </h1>
+			em {
+				color: green;
+				font-style: normal;
+				background-color: lightgrey;
+				font-weight: bold;
+			}
+		</style> -->
+	</head>
+	
+	<body> 
+	 <p>
+	    <strong> Introduction to Information Systems </strong>
+	 </p>
+	 <p>
+		<em>
+		Mustafa Taylan Şahbaz		
+		<br>
+		150200038
+		</em>
+	</p>
+	<p> Evolution of homo species </p>
+	<ul>
+		<li> Homo habilis (able man) </li>
+		<li> Homo erectus (upright man) </li>
+		<li> Homo neanderthalensis </li>
+		<li>Homo floresiensis (hobbit) </li>
+		<li>Homo sapiens (wise man) </li>
+		<ul>
+			<li>Homo sapiens sapiens </li>
+		</ul>
+	</ul>
+
+	<h1> <strong> Human Evolution </strong> </h1>
 	<p> <img src="evolution-diagram.png"> </p>
 
 	<p> You can find the link of the image below. 
@@ -45,42 +65,40 @@
 		</a> 
 	</p>
 
-<table>
-     <tr>
-	<th> Homo habilis </th>
-	<th> Homo erectus </th>
-	<th> Homo neanderthalensis </th>
-	<th> Homo sapiens </th>
-    </tr>
+	<table>
+		<tr>
+			<th> Homo habilis </th>
+			<th> Homo erectus </th>
+			<th> Homo neanderthalensis </th>
+			<th> Homo sapiens </th>
+		</tr>
 
-  <tr>
-	<td> Handy man </td>
-	<td> Upright man </td>
-	<td> Neandertal </td>	
-	<td> Wise man </td>
-  </tr>
+		<tr>
+			<td> Handy man </td>
+			<td> Upright man </td>
+			<td> Neandertal </td>
+			<td> Wise man </td>
+		</tr>
 
-  <tr>
-	<td> ∼2.3–1.65 million years ago </td>
-	<td> ∼2 million years ago </td>
-	<td> ∼40,000 years ago </td>
-	<td> ∼13.000 years ago to today </td>
-   </tr>
-  </table>
+		<tr>
+			<td> ∼2.3–1.65 million years ago </td>
+			<td> ∼2 million years ago </td>
+			<td> ∼40,000 years ago </td>
+			<td> ∼13.000 years ago to today </td>
+		</tr>
+	</table>
 
-  <pre> 
- 		What are homo sapiens?
-	Homo sapiens is the species of all the highly developed primates on earth,
-	a category that living humans belong to.
-	These primates include humans,
-	apes,
-	lorises,
-	tarsiers,
-	lemurs,
-	monkeys.
-   </pre> 
-  </body> 
+	<pre>
+							What are homo sapiens?
+		Homo sapiens is the species of all the highly developed primates on earth,
+		a category that living humans belong to.
+		These primates include humans,
+								apes,
+								lorises,
+								tarsiers,
+								lemurs,
+								monkeys.
+	</pre>
+
+	</body>
 </html>
-
-     
-  
