CSS rules updated.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	 <p>
 	    <strong> Introduction to Information Systems </strong>
 	 </p>
-	 <p>
+	 <p class = "centered">
 		<em>
 		Mustafa Taylan Şahbaz		
 		<br>
